fix alignment of site slogan for xs screen

--- a/less/overrides.less
+++ b/less/overrides.less
@@ -132,6 +132,7 @@ body {
   text-transform: uppercase;
   @media (min-width: @screen-sm-min) {
     float: right !important;
+    line-height: 2.8em;
   }
 }
 
